# botlab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  seed.example.yaml
.github/workflows/: test.yml
docs/: DESIGN.md  INTEGRATOR-BOT-PLAN.md  SECURITY-ASSESSMENT.md
gitlab-admin-bot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gitlab-admin-bot/config/: config.yaml
gitlab-admin-bot/mcp/borg-server/: __init__.py  server.py
gitlab-admin-bot/mcp/gitlab-server/: __init__.py  server.py
gitlab-admin-bot/mcp/hetzner-server/: __init__.py  server.py
gitlab-admin-bot/scripts/: install.sh
gitlab-admin-bot/src/: __init__.py  config.py  main.py  scheduler.py
gitlab-admin-bot/src/ai/: __init__.py  analyst.py  claude_cli.py
gitlab-admin-bot/src/alerting/: __init__.py  manager.py
gitlab-admin-bot/src/maintenance/: __init__.py  tasks.py
gitlab-admin-bot/src/monitors/: __init__.py  backup.py  base.py  health.py  resources.py
gitlab-admin-bot/src/restore/: __init__.py  recovery.py  tester.py
gitlab-admin-bot/src/utils/: __init__.py  gitlab_api.py  ssh.py
gitlab-admin-bot/tests/: __init__.py  conftest.py  test_ai_analyst.py  test_alerting.py  test_claude_cli.py  test_gitlab_api.py  test_main.py  test_main_extended.py  test_maintenance.py  test_monitors.py  test_recovery.py  test_recovery_extended.py  test_scheduler.py  test_seed.py  test_ssh.py
scripts/: backup-to-s3.sh  gitlab-setup.sh  gitlab.rb.template  restore-gitlab.sh  seed_bootstrap.py  seed_schema.py  setup-borg-append-only.sh  setup-borg-backup.sh  verify-backup.sh
terraform/: .gitignore  firewalls.tf  load_balancer.tf  network.tf  outputs.tf  provider.tf  servers.tf  ssh_keys.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/templates/: admin-bot-cloud-init.yaml  (+1 more)
