[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlab-admin-bot"
version = "1.0.0"
description = "AI-powered GitLab administration bot with automated monitoring, maintenance, and backup verification"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "ACME Corp", email = "admin@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
    "python-gitlab>=4.4.0",
    "httpx>=0.26.0",
    "paramiko>=3.4.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "prometheus-client>=0.19.0",
    "aiofiles>=23.2.0",
    "anthropic>=0.43.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "hcloud>=1.35.0",
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "respx>=0.20.0",
]

[project.scripts]
gitlab-admin-bot = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
